--- a/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
+++ b/ICIN-frontend/src/app/registration/subComponents/kyc-details/kyc-details.component.html
@@ -16,6 +16,9 @@
             <div *ngIf="f.dob.errors.required">    <p class="alert alert-warning mt-2" >Date of birth is required</p>  </div>
         </div>
     </div>
+    <p class="alert alert-warning mt-2" *ngIf="invalidAge" >User Should be minimum 10 years old </p> 
+
+    
 </div>
 <div class="form-group">
     <div class="input-group">
