--- a/ICIN-frontend/src/app/user-home/user-home.component.html
+++ b/ICIN-frontend/src/app/user-home/user-home.component.html
@@ -58,9 +58,9 @@
 
                         </div>
                         <hr>
-                        <div class="bottom-section">
+                        <div class="bottom-section" (click)="handleDeposit('Primary Account')">
                             <div class="details float-right">
-                                <i class="fa fa-arrow-right" aria-hidden="true" (click)="handleDeposit('Primary')"></i>
+                                <i class="fa fa-arrow-right" aria-hidden="true" ></i>
                             </div>
                             <div>
                                 Go to deposits
@@ -79,9 +79,9 @@
         
                                 </div>
                                 <hr>
-                                <div class="bottom-section">
+                                <div class="bottom-section"(click)="handleWithdraw('Primary Account')">
                                     <div class="details float-right">
-                                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                        <i class="fa fa-arrow-right" aria-hidden="true" ></i>
                                     </div>
                                     <div>
                                         Go to Withdrawal
