--- a/ICIN-frontend/src/app/withdraw-fund/withdraw-fund.component.html
+++ b/ICIN-frontend/src/app/withdraw-fund/withdraw-fund.component.html
@@ -12,7 +12,7 @@
         <input type="text" class="form-control" readonly id="accountBalance" placeholder formControlName="balance" value="{{balanceFund}}">
     </div>
       <div class="form-group">
-        <label for="amountToBeDeposited">Amount to be deposited</label>
+        <label for="amountToBeDeposited">Amount to be withdrawn</label>
         <input type="number" class="form-control"  id="amountToBeDeposited" formControlName="amountToBeDeposited" 
         [ngClass]="{'is-invalid':submitted && f.amountToBeDeposited.errors}">
         <div *ngIf="f.amountToBeTransfered.errors" class="invalid-feedback">
