--- a/ICIN-frontend/src/app/user-home/user-home.component.html
+++ b/ICIN-frontend/src/app/user-home/user-home.component.html
@@ -5,7 +5,7 @@
                 
                         <div class="top-section">
                             <div class="balance float-right">
-                                1000 Rs
+                                {{primaryAccountBalance}} Rs
                             </div>
                             <div class="account type">
                                 Primary
@@ -28,7 +28,7 @@
                 
                     <div class="top-section">
                         <div class="balance float-right">
-                            500 Rs
+                            {{savingAccountBalance}} Rs
                         </div>
                         <div class="account type">
                             Saving Account
