--- a/ICIN-frontend/src/app/deposit-funds/deposit-funds.component.html
+++ b/ICIN-frontend/src/app/deposit-funds/deposit-funds.component.html
@@ -13,7 +13,7 @@
     </div>
       <div class="form-group">
         <label for="amountToBeDeposited">Amount to be deposited</label>
-        <input type="number" class="form-control"  id="amountToBeDeposited" formControlName="amountToBeDeposited" 
+        <input type="number" class="form-control"  id="amountToBeDeposited" formControlName="amountToBeDeposited" min=1 
         [ngClass]="{'is-invalid':submitted && f.amountToBeDeposited.errors}">
         <div *ngIf="f.amountToBeDeposited.errors" class="invalid-feedback">
             <div *ngIf="f.amountToBeDeposited.errors.required">
